--- a/style.css
+++ b/style.css
@@ -98,10 +98,11 @@ h1 {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
-    padding: 10px 20px;
+    padding: 14px 20px;
     letter-spacing: 2px;
     width: 40%;
     text-align: center;
+    transition: all 500ms;
 }
 
 .btn:hover {
