--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
     padding: 0;
     display: flex;
     justify-content: space-between;
+
 }
 
 /* .nav-links li {
@@ -61,7 +62,7 @@ header {
 
 .evolution p {
     font-size: 15px;
-    line-height: 1rem;
+    line-height: 1.4rem;
     color: var(--dark-grayish-blue);
 }
 
@@ -121,7 +122,7 @@ h1 {
     margin: 0;
     list-style: none;
     color: var(--off-white);
-    padding: 2rem;
+    padding: 1rem;
     box-sizing: border-box;
 }
 
@@ -220,7 +221,7 @@ footer {
     }
 
     #other-content {
-        display: none;
+        grid-template-columns: none;
     }
 
     .future-box {
